# docling-rs

./: .gitignore  Cargo.toml  README.md
examples/: convert_file.rs  convert_file_async.rs  convert_url.rs  convert_url_async.rs  convert_url_blocking.rs  health.rs
src/: blocking.rs  client.rs  error.rs  lib.rs
src/models/: enums.rs  mod.rs  requests.rs  responses.rs
tests/: client_async.rs  client_auth.rs  client_convert.rs  client_file.rs  client_health.rs  serde_enums.rs  serde_requests.rs  serde_responses.rs
tests/common/: mod.rs
